Fix button alignment in instance account credentials dialog.
[fixes #25686923]

--- a/scss/modals/_instance_account.scss
+++ b/scss/modals/_instance_account.scss
@@ -1,8 +1,7 @@
 @import "../common";
 
 .instance_account {
-
-    width: 440px;
+    width: 475px;
 
     label {
         display: inline-block;
